# properties

./: .clang-format  CMakeLists.txt  LICENSE  basic_property.cpp  basic_property.h  group_property.cpp  group_property.h  known_group_property.h  numeric_property.cpp  numeric_property.h  property.cpp  property.h
quantities/: time_property.cpp  time_property.h
serialisation/: json_serialiser.cpp  json_serialiser.h  serialiser.cpp  serialiser.h
tests/: CMakeLists.txt  basic_properties.cpp  bool2property.h  deserialise.cpp  group_properties.cpp  numeric_properties.cpp  quantity_properties.cpp  serialise.cpp  xyproperty.h
